--- a/Project 2/styles/marxP2.css
+++ b/Project 2/styles/marxP2.css
@@ -514,7 +514,12 @@ textarea,
 	justify-content: center;
 }
 
+section{
+	background-color: rgba(200, 200, 255, 0.8);
+}
+
 #controls{
+  background-color: rgba(200, 200, 255, 0.8);
   margin-left: 1rem;
 }
 
@@ -552,6 +557,7 @@ summary {
   width: 100%; }
 
 main {
+  color: rgba(200, 200, 255, 0.8);
   display: block;
   margin: 0 auto;
   max-width: 768px;
@@ -597,7 +603,7 @@ video {
   border: 0; }
 
 body {
-  color: rgba(0, 0, 0, 0.8);
+  color: rgba(200, 200, 255, 0.8);
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 16px;
   line-height: 1.5; }
